--- a/TD2/BasicWebServer/BasicWebServerUrlParser.csproj
+++ b/TD2/BasicWebServer/BasicWebServerUrlParser.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Header.cs" />
+    <Compile Include="Mymethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
